tests/negative/lexer/string_invalid.orng
// string_invalid.orng:6:35: error: invalid escape sequence '\d'
//     let x = "invalid escape! -> \d"
//                                  ^
// 
fn main() -> Int {
    let x = "invalid escape! -> \d"
    0
}